# SlicerOpenMAPT1Auto

./: .gitignore  CMakeLists.txt  LICENSE.txt  OpenMAPT1Auto.json  OpenMAPT1Auto.py  OpenMAPT1AutoParcellation.py  OpenMAPT1AutoParcellation.s4ext  README.md  download_models.py  labeled.txt
OpenMAPT1Auto/: CMakeLists.txt  OpenMAPT1Auto.py  OpenMAPT1AutoParcellation.py
OpenMAPT1AutoParcellation/: CMakeLists.txt  OpenMAPT1AutoParcellation.py
OpenMAPT1AutoParcellation/OpenMAPT1AutoParcellationLib/utils/: postprocessing.py
