set(MODULE_NAME OpenMAPT1AutoParcellation)

# ✅ Sadece ana modül dosyası burada
set(MODULE_PYTHON_SCRIPTS
  ${MODULE_NAME}.py
)

set(MODULE_PYTHON_RESOURCES
  Resources/Icons/${MODULE_NAME}.png
)

slicerMacroBuildScriptedModule(
  NAME ${MODULE_NAME}
  SCRIPTS ${MODULE_PYTHON_SCRIPTS}
  RESOURCES ${MODULE_PYTHON_RESOURCES}
  WITH_GENERIC_TESTS
)

# ✅ Klasör yapısını koruyarak kopyala
install(
  DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/OpenMAPT1AutoParcellationLib
  DESTINATION ${Slicer_INSTALL_QTSCRIPTEDMODULES_LIB_DIR}
)

install(
  FILES ${CMAKE_CURRENT_SOURCE_DIR}/labeled.txt
  DESTINATION ${Slicer_INSTALL_QTSCRIPTEDMODULES_LIB_DIR}
  OPTIONAL
)
